# swift-python-cookiecutter

./: README.md  cookiecutter.json  makefile  pyproject.toml  requirements.txt  todo.md
.github/workflows/: test_creating_template_instance.yml
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  makefile  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/.github/: pull_request_template.md
{{cookiecutter.project_name}}/.github/workflows/: documentation.yml  lint.yml  release.yml  tests.yml
{{cookiecutter.project_name}}/docs/: extra.css  faq.md  index.md
{{cookiecutter.project_name}}/docs/api/: docs_example.md
{{cookiecutter.project_name}}/docs/tutorials/: usage.ipynb
