[project]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
authors = [
    {name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}"},
]
description = "{{cookiecutter.friendly_name}}"

classifiers = [
    "{{cookiecutter.development_status}}",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

requires-python = ">=3.8"
dependencies = [
  "pydantic>=1.10.0,<1.11.0",
]

[project.license]
file = "LICENSE"
name = "{{cookiecutter.license}}"

[project.urls]
homepage = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
repository = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
documentation = "https://{{cookiecutter.github_user}}.github.io/{{cookiecutter.project_name}}/"

[project.optional-dependencies]
dev = [
    "black==22.12.0",
    "pre-commit==2.20.0,<2.21.0",
    "ruff==0.0.191",
    "mypy==0.991",
    "cruft>=2.12.0,<2.13.0",
]
tests = [
    "pytest>=7.1.3,<7.3.0",
    "pytest-cov>=3.0.0,<3.1.0",
    "typeguard>=2.13.3,<2.14.0",
]
docs = [
    "sphinx>=5.3.0,<5.4.0",
    "furo>=2022.12.7,< 2022.12.8",
    "sphinx-copybutton>=0.5.1,<0.5.2",
    "sphinxext-opengraph>=0.7.3,<0.7.4",
    "sphinx_design>=0.3.0,<0.3.1",
    "myst-nb>=0.6.0,<1.17.0",
    "sphinx_togglebutton>=0.2.3,<0.4.0",
]
tutorials = [
    "jupyter>=1.0.0,<1.1.0"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"


[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[tool.coverage.run]
omit = [
    "**/tests/*",
]

exclude_lines = [
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __unicode__",
    "def __repr__",
    "if self.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.setuptools]
include-package-data = true



[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true
warn_unreachable = true
plugins = "pydantic.mypy"

[tool.pydantic-mypy]
init_typed = true
warn_untyped_fields = true


[tool.ruff]
exclude = [
    ".venv",
    ".env",
    ".git",
    "__pycache__",
]

[tool.ruff.isort]
known-third-party = ["wandb"]

[tool.semantic_release]
branch = "main"
version_variable = [
  "pyproject.toml:version"
]
upload_to_pypi = true
upload_to_release = true
build_command = "python -m pip install build; python -m build"

[tool.setuptools]
include-package-data = true
